fix overlapping click handlers in subjobs table
- click on job ID to jump to log for that subjob
- clock on any receiver serial number in parameters to show receiver info

--- a/inst/scripts/www/status2.css
+++ b/inst/scripts/www/status2.css
@@ -142,7 +142,7 @@
      text-shadow: 1px 1px 1px #555;
 }
 
-.subjob_table_row.with_log:hover {
+.subjob_id.with_log:hover {
      text-decoration:none;
      text-shadow: 1px 1px 1px #555;
 }
